--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -10,10 +10,10 @@ body, header {
 header {
   border-bottom: solid 1px seashell;
   position: fixed;
-  display: inline-flex;
-  justify-content: space-between;
   width: 100%;
   height: 69px;
+  z-index: 10;
+  align-items: center;
 }
 
 header img {
@@ -21,16 +21,39 @@ header img {
   margin-left: 10px;
 }
 
-nav p {
-  display: inline;
+nav {
+  text-align: right;
+  flex-grow: 1;
+}
+
+nav span {
+  display: inline-block;
+  margin: 20px 15px;
 }
 
 a {
-  text-decoration: underline;
+  color: seashell;
 }
 
 /* Classes */
-.hero {
+.flex-container {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+
+.main {
+  padding-top: 69px;
+  opacity: 0.9;
+  width: 1200px;
+  margin: auto;
+}
+
+/* Ids */
+#mission {
   background-image: url("../images/img-mission-background.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
   height: 700px;
+  padding-top: 70px;
 }
