--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -54,6 +54,13 @@ h2, h4 {
   margin: auto;
 }
 
+.product img {
+  width: 300px;
+  height: 200px;
+  margin: 10px;
+  display: block;
+}
+
 /* Ids */
 #mission {
   background-image: url("../images/img-mission-background.jpg");
@@ -67,5 +74,13 @@ h2, h4 {
   margin: auto;
   background-color: black;
   width: 100%;
+  text-align: center;
+}
+
+#store {
+  height: 700px;
+  width: 1000px;
+  margin: auto;
+  padding-top: 70px;
   text-align: center;
 }
