--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -35,9 +35,10 @@ a {
   color: seashell;
 }
 
-h2, h4 {
+h2, h3, h4 {
   margin: 0;
   padding: 10px;
+  font-weight: bold;
 }
 
 /* Classes */
@@ -54,11 +55,26 @@ h2, h4 {
   margin: auto;
 }
 
+.product {
+  margin: 0 5px;
+}
+
 .product img {
   width: 300px;
   height: 200px;
   margin: 10px;
   display: block;
+}
+
+.address {
+  opacity: 1;
+  background-color: black;
+  flex-basis: 280px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 10px;
+  margin: 5px 20px;
 }
 
 /* Ids */
@@ -81,6 +97,14 @@ h2, h4 {
   height: 700px;
   width: 1000px;
   margin: auto;
+  padding-top: 70px;
+  text-align: center;
+}
+
+#location {
+  background-image: url("../images/img-locations-background.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
   padding-top: 70px;
   text-align: center;
 }
