--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -21,6 +21,11 @@ header img {
   margin-left: 10px;
 }
 
+footer {
+  text-align: left;
+  padding-left: 20px;
+}
+
 nav {
   text-align: right;
   flex-grow: 1;
@@ -107,4 +112,15 @@ h2, h3, h4 {
   background-repeat: no-repeat;
   padding-top: 70px;
   text-align: center;
+  height: 500px;
+}
+
+#location .flex-container {
+  width: 1100px;
+  margin: auto;
+}
+
+#contact {
+  text-align: center;
+  height: 200px;
 }
